--- a/src/main/resources/templates/_navbar.html
+++ b/src/main/resources/templates/_navbar.html
@@ -1,8 +1,6 @@
 
-<div class="container" xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<div class="container" xmlns:th="http://www.thymeleaf.org">
 
-    <h2 class="first-title">Tin tức 24h</h2>
     <ul class="nav nav-tabs">
       <li class="nav-item">
         <a class="nav-link active" href="#">Trong nước</a>
@@ -23,24 +21,24 @@
         <a class="nav-link" href="#">Thể thao</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#">Bất động sản</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Tiền số</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Chứng khoán</a>
       </li>
-  
-      <li class="nav-item">
-        <form class="form-inline" action="/action_page.php">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-success" type="submit">Search</button>
-        </form>
-      </li>
-      <li class="nav-item dropdown">
+      <li class="dropdown float-left">  
+        
         <a class="nav-link dropdown-toggle nav-left" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-user"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right dropdown-default"
           aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="#">Lognin</a>
-          <a class="dropdown-item" href="#">Logout</a>
+          <a class="dropdown-item" th:href="@{/login}">Login</a>
+
         </div>
       </li>
     </ul>
