--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,84 +4,31 @@
   <title>Admin-Home</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../static/style.css">
+  <link rel="stylesheet" th:href="@{/style.css}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" 
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container" xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-
-    <div class="row">
-      <a href="C:/Users/congu/Documents/NewsProject/src/main/resources/templates/index.html" ><h2 class="first-title">Tin tức 24h JP</h2></a>
-      
-      <!-- Search form -->
-      <form class="form-inline col">
-        <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
-        aria-label="Search">
-        <button class="btn btn-success" type="submit" style="margin-top:0;"><i class="fas fa-search" aria-hidden="true"></i></button>
-      </form>
-
+	
+	<th:block th:include="/_header"></th:block>
+    <th:block th:include="/_admin_header"></th:block>
+    <div class="container">
+	    <div class="col-sm-6">	    
+		    <a th:href="@{/newdetail}">
+		    	<th:block th:include="/_newcontent"></th:block>
+		   	</a>		     
+	    </div>
     </div>
-    
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">HOME</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" target="_blank" href="C:/Users/congu/Documents/NewsProject/src/main/resources/templates/addnew.html">Thêm bài viết</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="#">Tác giả</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Bình luận</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="#">Phê duyệt</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="#">Đã xóa</a>
-      </li>
-
-      <li class="nav-item dropdown float-left">  
-        <a class="nav-link dropdown-toggle nav-left" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-user"></i>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right dropdown-default"
-          aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="C:/Users/congu/Documents/NewsProject/src/main/resources/templates/login.html">Lognin</a>
-          <!-- <a class="dropdown-item" href="#">Logout</a> -->
-        </div>
-      </li>
-    </ul>
-</div>
-
-<div class="container">
-
-    <div class="row">
-        <div class="col-sm-6" style="background-color:lavender;">
-            <a href="C:/Users/congu/Documents/NewsProject/src/main/resources/templates/newdetail.html">
-                <h2 class="title">${title}岸田首相の野望が動き出した…あえて「安倍路線」を引き継いだ「したたかな理由」 「最強の政権」を目指して</h2>
-                <img src="" alt="">${images}
-                <h4 class="short-content">${sortContent}</h4>
-                <p class="content">${content}</p>
-                <h5 class="category">${category}</h5>
-            </a>
-            <div class="edit">
-                <a href="C:/Users/congu/Documents/NewsProject/src/main/resources/templates/editnew.html" target="_blank"><i class="fas fa-edit" style="color: orange;"></i></a>
-                <a href=""><i class="fas fa-trash" style="color: red;"></i></a>
-            </div>
-        </div>
-    </div>
-
-</div>
+	<th:block th:include="/_pagination"></th:block>
+	<th:block th:include="/_footer"></th:block>
 
 </body>
 </html>
