--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
   <title>Tin Tức 24h JP</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../static/style.css">
+  <link rel="stylesheet" th:href="@{/style.css}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -14,136 +14,16 @@
 </head>
 <body>
 
-<!-- <th:block th:include="/_navbar"></th:block> -->
-
-<div class="container" xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-
-    <div class="row">
-      <a href="C:/Users/congu/Documents/NewsProject/src/main/resources/templates/index.html" ><h2 class="first-title">Tin tức 24h JP</h2></a>
-      
-      <!-- Search form -->
-      <form class="form-inline col">
-        <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
-        aria-label="Search">
-        <button class="btn btn-success" type="submit" style="margin-top:0;"><i class="fas fa-search" aria-hidden="true"></i></button>
-      </form>
-
+	<th:block th:include="/_header"></th:block>
+    <th:block th:include="/_navbar"></th:block>
+    <div class="container">
+	    <div class="col-sm-6">	    
+		    <a th:href="@{/newdetail}">
+		    	<th:block th:include="/_newcontent"></th:block>
+		   	</a>	     
+	    </div>
     </div>
-    
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Trong nước</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Quốc tế</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Chính trị</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Kinh tế</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="#">Xã hội</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="#">Thể thao</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Bất động sản</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Tiền số</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Chứng khoán</a>
-      </li>
-      <li class="nav-item dropdown">  
-        
-        <a class="nav-link dropdown-toggle nav-left" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-user"></i>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right dropdown-default"
-          aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href="C:/Users/congu/Documents/NewsProject/src/main/resources/templates/login.html">Lognin</a>
-          <!-- <a class="dropdown-item" href="#">Logout</a> -->
-        </div>
-      </li>
-    </ul>
-</div>
-
-<div class="container">
-
-  <div class="row">
-    <div class="col-sm-6" style="background-color:lavender;">
-      <a href="C:/Users/congu/Documents/NewsProject/src/main/resources/templates/newdetail.html">
-        <h2 class="title">${title}岸田首相の野望が動き出した…あえて「安倍路線」を引き継いだ「したたかな理由」 「最強の政権」を目指して</h2>
-        <img src="" alt="">${images}
-        <h4 class="short-content">${sortContent}</h4>
-        <p class="content">${content}</p>
-        <h5 class="category">${category}</h5>
-      </a>
-    </div>
-
-    <div class="col-sm-6" style="background-color:rebeccapurple;">
-      <a href="">
-        <h2 class="title">${title}</h2>
-        <img src="" alt="">${images}
-        <h4 class="short-content">${sortContent}</h4>
-        <p class="content">${content}</p>
-        <h5 class="category">${category}</h5>
-      </a>
-    </div>
-
-    <div class="col-sm-6" style="background-color:blueviolet;">
-      <a href="">
-        <h2 class="title">${title}</h2>
-        <img src="" alt="">${images}
-        <h4 class="short-content">${sortContent}</h4>
-        <p class="content">${content}</p>
-        <h5 class="category">${category}</h5>
-      </a>
-    </div>
-
-    <div class="col-sm-6" style="background-color:lavender;">
-      <a href="">
-        <h2 class="title">${title}</h2>
-        <img src="" alt="">${images}
-        <h4 class="short-content">${sortContent}</h4>
-        <p class="content">${content}</p>
-        <h5 class="category">${category}</h5>
-      </a>
-    </div>
-  
-  </div>
-  <ul class="pagination justify-content-center">
-    <li class="page-item"><a class="page-link" href="javascript:void(0);"><<</a></li>
-    <li class="page-item"><a class="page-link" href="javascript:void(0);">1</a></li>
-    <li class="page-item"><a class="page-link" href="javascript:void(0);">2</a></li>
-    <li class="page-item"><a class="page-link" href="javascript:void(0);">>></a></li>
-  </ul>
-
-
-</div>
-
-
-
-<div xmlns:th="http://www.thymeleaf.org">
-  <!-- Footer -->
-  <footer class="page-footer font-small blue">
-  
-      <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="/"> newbie.com</a>
-      </div>
-      <!-- Copyright -->
-    
-  </footer>
-  <!-- Footer -->
-  </div>
-  
-<th:block th:include="/_footer"></th:block>
+	<th:block th:include="/_pagination"></th:block>
+	<th:block th:include="/_footer"></th:block>
 </body>
 </html>
