--- a/src/main/resources/templates/_pagination.html
+++ b/src/main/resources/templates/_pagination.html
@@ -1,7 +1,15 @@
 
-  <ul class="pagination justify-content-center" xmlns:th="http://www.thymeleaf.or">
-    <li class="page-item"><a class="page-link" href="javascript:void(0);">Trước</a></li>
-    <li class="page-item"><a class="page-link" href="javascript:void(0);">1</a></li>
-    <li class="page-item"><a class="page-link" href="javascript:void(0);">2</a></li>
-    <li class="page-item"><a class="page-link" href="javascript:void(0);">Sau</a></li>
+  <ul class="pagination justify-content-center" xmlns:th="http://www.thymeleaf.or" >
+    <li class="page-item">
+    	<a class="page-link">&laquo;</a>
+    </li>
+    <li class="page-item">
+    	<th:block th:each="page : ${#numbers.sequence(1, totalPage)}">
+    		<a class="page-link" th:href="@{|/?page=${page}|}" th:utext="${page}"></a>
+<!--     		<span class="nav-item" th:if="${page == -1}"> ... </span> -->
+    	</th:block>
+    </li>
+    <li class="page-item">
+    	<a class="page-link">&raquo;</a>
+    </li>
   </ul>
