--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,18 +11,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" 
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 	<th:block th:include="/_header"></th:block>
-    <th:block th:include="/_navbar"></th:block>
-    <div class="container">
-	    <div class="col-sm-6">	    
-		    <a th:href="@{/newdetail}">
-		    	<th:block th:include="/_newcontent"></th:block>
-		   	</a>	     
-	    </div>
-    </div>
+  	<th:block th:include="/_navbar"></th:block>
+	<th:block th:include="/_newSummary"></th:block>	     
 	<th:block th:include="/_pagination"></th:block>
 	<th:block th:include="/_footer"></th:block>
 </body>
