--- a/src/main/resources/templates/_admin_header.html
+++ b/src/main/resources/templates/_admin_header.html
@@ -4,7 +4,7 @@
         <a class="nav-link active" href="#">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" target="_blank" th:href="@{/addnew}">Thêm bài viết</a>
+        <a class="nav-link" target="_blank" th:href="@{/post/add}">Thêm bài viết</a>
       </li>
 
       <li class="nav-item">
