--- a/src/main/resources/templates/editNew.html
+++ b/src/main/resources/templates/editNew.html
@@ -22,7 +22,7 @@
 <body>
 	<div class="container">
 		<h2>Sửa bài viết</h2>
-		<form method="POST" th:action="@{/admin/editnew}"
+		<form method="POST" th:action="@{/post/edit}"
 			enctype="multipart/form-data">
 			<input type="hidden" name="id" th:value="${post.id}" />
 			<div class="form-group">
