--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Tin Tức 24h JP</title>
+  <title>News J&V</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" th:href="@{/style.css}">
@@ -19,9 +19,15 @@
 <body>
 
 	<th:block th:include="/_header"></th:block>
-  	<th:block th:include="/_navbar"></th:block>
+  	<th:block th:include="/_navbar"></th:block>  	 	
 	<th:block th:include="/_newSummary"></th:block>	     
 	<th:block th:include="/_pagination"></th:block>
 	<th:block th:include="/_footer"></th:block>
 </body>
+
+<script type="text/javascript">
+	var page = document.getElementById("[[${page}]]");
+	page.style.background = "#28a745";
+	page.style.color = "white";
+</script>
 </html>
