--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -1,8 +1,7 @@
 
 <div class="container"  xmlns:th="http://www.thymeleaf.org">
 	<div class="row">
-      <a th:href="@{/}"><h2 class="first-title">Tin tức 24h JP</h2></a>
-      
+      <a th:href="@{/}"><h2 class="first-title">News J&V</h2></a>
       <!-- Search form -->
       <form class="form-inline col">
         <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search"
