--- a/src/main/resources/templates/_navbar.html
+++ b/src/main/resources/templates/_navbar.html
@@ -1,34 +1,14 @@
 
 <div class="container" xmlns:th="http://www.thymeleaf.org">
 
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Trong nước</a>
+    <ul class="nav nav-tabs" >
+       <li class="nav-item ">
+        <a class="nav-link active" href="#">Tin Mới</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Quốc tế</a>
+      <li class="nav-item" th:each="cate : ${categories}">
+        <a class="nav-link"  th:href="@{|/category=${cate.name}|}" th:utext="${cate.name}" ></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Chính trị</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Kinh tế</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="#">Xã hội</a>
-      </li>    
-      <li class="nav-item">
-        <a class="nav-link" href="#">Thể thao</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Bất động sản</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Tiền số</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Chứng khoán</a>
-      </li>
+      
       <li class="dropdown float-left">  
         
         <a class="nav-link dropdown-toggle nav-left" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
@@ -38,7 +18,7 @@
         <div class="dropdown-menu dropdown-menu-right dropdown-default"
           aria-labelledby="navbarDropdownMenuLink-333">
           <a class="dropdown-item" th:href="@{/login}">Login</a>
-
+			<a class="dropdown-item" th:href="@{/post/add}">PostAdd</a>
         </div>
       </li>
     </ul>
