--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,17 +29,17 @@
                     <!--
                     <div class="alert alert-danger alert-dismissible fade show" 
                     role="alert">Incorrect username or password.</div> -->
-                    <form method="POST">
+                    <form method="POST" th:action="@{/admin/login}" >
                         <!-- to error: add class "has-danger" -->
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control form-control-sm"
+                            <input name="email" type="email" class="form-control form-control-sm"
                             id="exampleInputEmail1" aria-describedby="emailHelp">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
                             <a href="#" style="float:right;font-size:12px;">Forgot password? </a>
-                            <input type="password" class="form-control form-control-sm"
+                            <input name="password" type="password" class="form-control form-control-sm"
                   				id="exampleInputPassword1">
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Signin</button>
